fixed menu on mobile

--- a/src/components/userProfile/UserProfile.css
+++ b/src/components/userProfile/UserProfile.css
@@ -54,3 +54,11 @@
   animation: rotating 10s linear infinite;
 }
 
+.noSelect {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
